<resources>
    <string name="ip">http://172.16.115.44:8000/</string>
    <string name="api_home">http://192.168.43.123:8000/api/</string>
    <string name="api_event_search">http://192.168.43.123:8000/api/</string>
    <string name="ip_pref">ip_pref</string>
    <string name="app_name">CSEA Event Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="csea_event_management_app">CSEA Event Management App</string>
    <string name="login_signup">Login/Signup</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_roll_number">Roll Number</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_email">Use Outlook email (username@iitg.ac.in)</string>
    <string name="error_empty_password">This password is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_signup">Sign Up</string>
    <string name="branch">Branch</string>
    <string name="name">Name</string>
    <string name="year_of_admission">Year of admission</string>
    <string name="phone_number">Phone Number</string>
    <string-array name="signup_dept">
        <item>BTech</item>
        <item>BDes</item>
        <item>MSC</item>
        <item>MA</item>
        <item>MTech</item>
        <item>MDes</item>
        <item>MSR</item>
        <item>PHD</item>
        <item>CSE_Dual</item>
        <item>EEE_Dual</item>
    </string-array>
    <string-array name="signup_prog">
        <item>Not Applicable</item>
        <item>cse</item>
        <item>ece</item>
        <item>me</item>
        <item>ce</item>
        <item>dd</item>
        <item>bsb</item>
        <item>cl</item>
        <item>cst</item>
        <item>eee</item>
        <item>ma</item>
        <item>ph</item>
        <item>rt</item>
        <item>hss</item>
        <item>enc</item>
        <item>env</item>
        <item>nt</item>
        <item>lst</item>
    </string-array>
    <string-array name="branches_super">
        <item>Select Programme</item>
        <item>Bachelor of Technology (B.Tech.)</item>
        <item>Bachelor of Design (B.Des.)</item>
        <item>Master of Science (M.Sc.)</item>
        <item>Master of Arts in Development Studies (MA)</item>
        <item>Master of Technology (M.Tech.)</item>
        <item>Master of Design (M.Des.)</item>
        <item>Master of Science by Research in Energy [MS(R)]</item>
        <item>Doctorate of Philosophy (Ph.D.)</item>
        <item>CSE Dual(MTech+PhD) degree</item>
        <item>EEE Dual Degree [MS(Engg)+PhD)</item>
    </string-array>
    <string-array name="branches_bdes">
        <item>Not applicable</item>
    </string-array>
    <string-array name="admin_approve">
        <item>Approve</item>
        <item>Decline</item>
        <item>Pending</item>
    </string-array>
    <string-array name="year_bdes">
        <item>Select Year of Study</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>All</item>
    </string-array>
    <string-array name="branches_ma">
        <item>Not applicable</item>
    </string-array>
    <string-array name="year_ma">
        <item>Select Year of Study</item>
        <item>1</item>
        <item>2</item>
        <item>All</item>
    </string-array>
    <string-array name="branches_mdes">
        <item>Not applicable</item>
    </string-array>
    <string-array name="year_mdes">
        <item>Select Year of Study</item>
        <item>1</item>
        <item>2</item>
        <item>All</item>
    </string-array>
    <string-array name="branches_msr">
        <item>Not applicable</item>
    </string-array>
    <string-array name="year_msr">
        <item>Select Year of Study</item>
        <item>1</item>
        <item>2</item>
        <item>All</item>
    </string-array>
    <string-array name="branches_cseDual">
        <item>Not applicable</item>
    </string-array>
    <string-array name="year_cseDual">
        <item>Select Year of Study</item>
        <item>1</item>
        <item>2</item>
        <item>3+</item>
        <item>All</item>
    </string-array>
    <string-array name="branches_eeeDual">
        <item>Not applicable</item>
    </string-array>
    <string-array name="year_eeeDual">
        <item>Select Year of Study</item>
        <item>1</item>
        <item>2</item>
        <item>3+</item>
        <item>All</item>
    </string-array>
    <string-array name="branches_btech">
        <item>Stream</item>
        <item>Biotechnology</item>
        <item>Chemical Engineering</item>
        <item>Chemical Science and Technology</item>
        <item>Civil Engineering</item>
        <item>Computer Science &amp; Engineering</item>
        <item>Electronics &amp; Communication Engineering</item>
        <item>Electronics and Electrical Engineering</item>
        <item>Engineering Physics</item>
        <item>Mathematics &amp; Computing</item>
        <item>Mechanical Engineering</item>
        <item>All</item>
    </string-array>
    <string-array name="year_btech">
        <item>Select Year of Study</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>All</item>
    </string-array>
    <string-array name="year_mtech">
        <item>Select Year of Study</item>
        <item>1</item>
        <item>2</item>
        <item>All</item>
    </string-array>
    <string-array name="year_msc">
        <item>Select Year of Study</item>
        <item>1</item>
        <item>2</item>
        <item>All</item>
    </string-array>
    <string-array name="year_phd">
        <item>Not applicable</item>
    </string-array>
    <string-array name="branches_mtech">
        <item>Stream</item>
        <item>Biotechnology</item>
        <item>Chemical Engineering</item>
        <item>Civil Engineering</item>
        <item>Computer Science and Engineering</item>
        <item>Electronics and Electrical Engineering</item>
        <item>Mechanical Engineering</item>
        <item>Centre for Rural Technology</item>
        <item>All</item>
    </string-array>
    <string-array name="branches_msc">
        <item>Stream</item>
        <item>Chemistry</item>
        <item>Mathematics and Computing</item>
        <item>Physics</item>
        <item>All</item>
    </string-array>
    <string-array name="branches_phd">
        <item>Stream</item>
        <item>Biotechnology</item>
        <item>Chemical Engineering</item>
        <item>Chemistry</item>
        <item>Civil Engineering</item>
        <item>Computer Science &amp; Engineering</item>
        <item>Design</item>
        <item>Electronics and Electrical Engineering</item>
        <item>Humanities and Social Sciences</item>
        <item>Physics</item>
        <item>Mathematics</item>
        <item>Mechanical Engineering</item>
        <item>Center for energy</item>
        <item>Center for environment</item>
        <item>Centre for Linguistic Science and Technology</item>
        <item>Centre for Rural Technology</item>
        <item>All</item>
    </string-array>
    <string-array name="venue_array">
        <item>Select a venue…</item>
        <item>Lecture Hall 1</item>
        <item>Lecture Hall 2</item>
        <item>Lecture Hall 3</item>
        <item>Lecture Hall 4</item>
        <item>Conference Room</item>
        <item>CSE Seminar Room</item>
        <item>Core 2 Rooms</item>
        <item>Core 5 Rooms</item>
        <item>Mini Auditorium</item>
        <item>Main Auditorium</item>
        <item>Department Library</item>
    </string-array>
    <string-array name="venue_array2">
        <item>None</item>
        <item>Lecture Hall 1</item>
        <item>Lecture Hall 2</item>
        <item>Lecture Hall 3</item>
        <item>Lecture Hall 4</item>
        <item>Conference Room</item>
        <item>CSE Seminar Room</item>
        <item>Core 2 Rooms</item>
        <item>Core 5 Rooms</item>
        <item>Mini Auditorium</item>
        <item>Main Auditorium</item>
        <item>Department Library</item>
    </string-array>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="apurva_n_saraogi">Apurva N. Saraogi\nTechnical Executive\n3rd Year Undergraduate\nWebmail Id:\napurva9</string>
    <string name="prof_s_v_rao">Prof. S. V. Rao  President\nCSEA  HOD, Dept. Of CSE\nWebmail id:\nsvrao@iitg.ernet.in</string>
    <string name="benny_k_george">Benny K. George\nFaculty Mentor\nCSEA  Assistant Professor\nWebmail id:\nben@iitg.ernet.in</string>
    <string name="deepanjan_kesh">Deepanjan Kesh\nFaculty Mentor\n CSEA  Assistant Professor\nWebmail id:\ndeepkesh@iitg.ernet.in</string>
    <string name="rohan_aggarwal">Rohan Aggarwal\nGeneral Secretary\nFinal Year Undergraduate\nWebmail Id:\nrohan.aggarwal</string>
    <string name="mayank_kumar_agarwal">Mayank Kumar Agarwal\nBranch Representative\nFinal Year Undergraduate\nWebmail Id:\nmayank.agarwal</string>
    <string name="roopansh_bansal">Roopansh Bansal\nTechnical and Events Head\nFinal Year Undergraduate\nWebmail Id:\nroopansh</string>
    <string name="mitansh_jain">Mitansh Jain\nTechnical Executive\n3rd Year Undergraduate\nWebmail Id:\nmitansh1398</string>
    <string name="jatin_goyal">Jatin Goyal\nEvents Executive\n3rd Year Undergraduate\nWebmail Id:\njatingoyal</string>
    <string name="shimona_verma">Shimona Verma\nEvents Executive\n3rd Year Undergraduate\nWebmail Id:\nshimona.verma</string>
    <string name="devaishi_tiwari">Devaishi Tiwari\nEvent Manager\n2nd Year Undergraduate\nWebmail Id:\ndevai170101021</string>
    <string name="mayank_wadhwani">Mayank Wadhwani\nEvent Manager\n2nd Year Undergraduate\nWebmail Id:\nmayan170101038</string>
    <string name="manan_gupta">Manan Gupta\nTechnichal Co-ordinator\n2nd Year Undergraduate\nWebmail Id:\nmanan170101035</string>
    <string name="shivam_bansal">Shivam Bansal\nTechnichal Co-ordinator\n2nd Year Undergraduate\nWebmail Id:\nshiva170101063</string>
    <string name="chirag_gupta">Chirag Gupta\nAlumini Relations Representative\n2nd Year Undergraduate\nWebmail Id:\ngupta170101019</string>
    <string name="utkarsh_jain">Utkarsh Jain\nBranch Representative\n2nd Year Undergraduate\nWebmail Id:\njain170101075</string>
    <string name="title_activity_list_events">ListEventsActivity</string>
    <string name="error_invalid_value">This value is invalid</string>
    <string name="name_not_available">Name not available</string>
    <string name="description_not_available">Description not available</string>
    <string name="date_not_available">Date not available</string>
</resources>