<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical">

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:ellipsize="end"
        android:paddingStart="0dp"
        android:paddingTop="@dimen/activity_padding_all"
        android:paddingEnd="@dimen/activity_padding_all"
        android:paddingBottom="3dp"
        android:text="@string/name_not_available"
        android:textAlignment="textStart"
        android:textColor="#000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/activity_padding_all"
        android:paddingBottom="@dimen/activity_padding_all"
        android:text="@string/description_not_available"
        android:textAlignment="textStart"
        android:textColor="#333"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/desc"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:paddingStart="50dp"
        android:paddingEnd="@dimen/activity_padding_all"
        android:paddingBottom="@dimen/activity_padding_all"
        android:text="@string/date_not_available"
        android:textAlignment="textEnd"
        android:textSize="12sp" />


</RelativeLayout>