<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_padding_all"
            android:paddingTop="@dimen/activity_padding_all"
            android:paddingRight="@dimen/activity_padding_all"
            android:paddingBottom="5dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:scaleType="fitCenter"
                android:paddingLeft="@dimen/activity_padding_all"
                android:paddingTop="@dimen/activity_padding_all"
                android:paddingRight="@dimen/activity_padding_all"
                android:paddingBottom="@dimen/activity_padding_all"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/iitg" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_padding_all"
                android:paddingTop="@dimen/activity_padding_all"
                android:paddingRight="@dimen/activity_padding_all"
                android:paddingBottom="@dimen/activity_padding_all">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_padding_all"
                android:paddingTop="@dimen/activity_padding_all"
                android:paddingRight="@dimen/activity_padding_all"
                android:paddingBottom="@dimen/activity_padding_all"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingRight="@dimen/activity_padding_all"
                android:paddingBottom="0dp"
                android:text="Forgot Password? Click Here" />
                <!--android:textAlignment="textEnd" />-->


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:paddingLeft="40dp"
                android:paddingTop="@dimen/activity_padding_all"
                android:paddingRight="40dp"
                android:paddingBottom="@dimen/activity_padding_all"
                android:text="@string/action_sign_in"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/SignupLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="@dimen/activity_padding_all"
                android:paddingTop="@dimen/activity_padding_all"
                android:paddingRight="@dimen/activity_padding_all"
                android:paddingBottom="@dimen/activity_padding_all"
                android:text="Don't have an account? SignUp Here"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>